fix word wrapping on tweet name

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,6 +7,7 @@ article {
 article header {
   color: #9AA8DA;
   word-break: break-all;
+  word-break: break-word;
 }
 
 .avatar {
